#881492 by Dave Reid: Fixed expand arrows in token tree smooshed too far to the left and no longer visible.

--- a/token.css
+++ b/token.css
@@ -1,10 +1,11 @@
 /* $Id$ */
 
-table.token-tree {
+.token-tree {
   font-size: 0.85em;
+  margin-left: 19px;
 }
 
-table.token-tree td, table.token-tree th {
+.token-tree td, .token-tree th {
   padding-top: 0;
   padding-bottom: 0;
 }
